--- a/vignettes/Genomes1000.Rmd
+++ b/vignettes/Genomes1000.Rmd
@@ -74,11 +74,17 @@ NB: CGRCh38 positions in vcf format can be found [here](http://ftp.1000genomes.e
 The remainder of this vignette will however look at the data processing required
 for the 1000GenomesIII available in
 [PLINK 2 binary format](https://www.cog-genomics.org/plink/2.0/input#pgen).
+
+NB: the links to the files below are the three boldfaced links on this page:
+https://www.cog-genomics.org/plink/2.0/resources#1kg_phase3. The dropbox links
+have been updated in the past, which means the links below where outdated.
+Please refer to the original site and open an issue on github if you notice
+a change. Thank you!
 ```{bash download, eval=FALSE}
 cd $refdir
 
 pgen=https://www.dropbox.com/s/afvvf1e15gqzsqo/all_phase3.pgen.zst?dl=1
-pvar=https://www.dropbox.com/s/0nz9ey756xfocjm/all_phase3.pvar.zst?dl=1
+pvar=https://www.dropbox.com/s/op9osq6luy3pjg8/all_phase3.pvar.zst?dl=1
 sample=https://www.dropbox.com/s/yozrzsdrwqej63q/phase3_corrected.psam?dl=1
 
 wget $pgen
